--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <img src="AsInAIHB.png" alt="Logo Association" class="logo" />
-    <h1>Association des Internes et Anciens Internes des Hôpitaux</h1>
+    <h1>Association des Internes et Anciens Internes des Hôpitaux du Bénin</h1>
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
